--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,10 @@ services:
     ports:
       - "8080:8080"
     container_name: json-schema-service
+  mongo:
+    environment:
+      MONGODB_HOST: localhost:27017
+    image: mongo:6.0.2
+    ports:
+      - 27017:27017
+    container_name: mongo-db
